# typeshare_marker

./: Cargo.toml  README.md
src/: lib.rs
